add cam server implementation

--- a/prj.conf
+++ b/prj.conf
@@ -45,7 +45,7 @@ CONFIG_NET_TC_TX_COUNT=1
 
 CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=4
 CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=5
-CONFIG_NET_MAX_CONTEXTS=5
+CONFIG_NET_MAX_CONTEXTS=8
 CONFIG_NET_CONTEXT_SYNC_RECV=y
 
 CONFIG_INIT_STACKS=y
@@ -95,3 +95,19 @@ CONFIG_SETTINGS_NVS=y
 # design in net_mgmt. So, use a higher timeout for a crowded
 # environment.
 CONFIG_NET_MGMT_EVENT_QUEUE_TIMEOUT=5000
+
+CONFIG_POSIX_MAX_FDS=20
+
+CONFIG_SPI=y
+CONFIG_VIDEO=y
+CONFIG_VIDEO_INIT_PRIORITY=72
+CONFIG_VIDEO_BUFFER_POOL_SZ_MAX=8192
+CONFIG_VIDEO_BUFFER_POOL_NUM_MAX=3
+
+
+CONFIG_NET_PKT_RX_COUNT=30
+CONFIG_NET_PKT_TX_COUNT=30
+CONFIG_NET_BUF_RX_COUNT=30
+CONFIG_NET_BUF_TX_COUNT=60
+CONFIG_HEAP_MEM_POOL_SIZE=200000
+CONFIG_NET_BUF_DATA_SIZE=1100
